# Web-VTK

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  README.org  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: export-requirements.yml
deploy/: README.org
deploy/setup/: apps.yml  initialize.sh
setup/: requirements.txt
src/: main.py  vtk2www_inlet_outlets.py
vtk_web/: __init__.py  main.py  old_main.py  plotter.py
vtk_web/scripts/: seekers.old.py  vesselTrees.py
vtk_web/state/: __init__.py  file_input.py  main.py  visibility.py
vtk_web/ui/: __init__.py  drawer.py  main.py  toolbar.py  viewer.py
