[metadata]
name = vtk-web
version = 0.1.1
long_description = file: README.org
author = Andreu Cotanda Oliver

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-vtk
    pyvista
    numpy

[options.entry_points]
console_scripts =
    vtk-web = vtk_web:main
